--- a/oj-client/src/index.html
+++ b/oj-client/src/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title>OjClient</title>
   <base href="/">
-
+  <script src="https://cdn.auth0.com/js/auth0/9.5.1/auth0.min.js"></script>
+  <script src="https://cdn.auth0.com/js/lock/11.1/lock.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
